# grimoire-design-studio

./: .gitignore  AGENTS.md  AI_GUIDANCE.md  IMPLEMENTATION_PLAN.md  README.md  TESTING.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: quality.yml  test.yml
src/grimoire_studio/: __init__.py  __main__.py  main.py
src/grimoire_studio/core/: __init__.py  config.py  project_manager.py  validator.py
src/grimoire_studio/models/: __init__.py  grimoire_definitions.py  project.py
src/grimoire_studio/resolvers/: __init__.py
src/grimoire_studio/services/: __init__.py  decorators.py  dice_service.py  exceptions.py  flow_service.py  llm_service.py  name_service.py  object_service.py
src/grimoire_studio/services/action_handlers/: __init__.py  display_message.py  display_value.py  log_event.py  log_message.py  set_value.py  swap_values.py  validate_value.py
src/grimoire_studio/services/step_executors/: __init__.py  completion.py  conditional_branch.py  dice_roll.py  dice_sequence.py  flow_call.py  llm_generation.py  name_generation.py  player_choice.py  player_input.py  table_roll.py
src/grimoire_studio/ui/: __init__.py  main_window.py
src/grimoire_studio/ui/components/: __init__.py  output_console.py  project_browser.py  property_panel.py  yaml_highlighter.py
src/grimoire_studio/ui/dialogs/: __init__.py  flow_test_dialog.py  new_project.py
src/grimoire_studio/ui/views/: __init__.py  yaml_editor_view.py
tests/: __init__.py  test_basic.py  test_compendium_table_selection.py  test_config.py  test_config_integration.py  test_cross_platform_paths.py  test_dice_service.py  test_flow_service.py  test_flow_step_execution.py  test_flow_test_dialog.py  test_grimoire_model_031_fix.py  test_grimoire_model_fixes.py  test_grimoire_model_jinja2_bug.py  test_grimoire_models.py  test_integration.py  test_llm_service.py  test_logging.py  test_logs_command.py  test_main_window_relative_paths.py  test_name_service.py  test_object_service.py  test_output_console.py  test_output_console_relative_paths.py  test_project_browser.py  test_project_manager.py  test_property_panel.py  test_roll_type_workaround.py  test_tabbed_editor.py  test_table_selection.py  test_template_resolver_fix.py  test_validation_integration.py  test_validation_success_messages.py  test_validator.py  test_validator_prompt_fix.py
tests/services/: test_action_handlers.py  test_step_executors.py
tests/ui/: __init__.py  test_main_window.py  test_main_window_yaml_integration.py  test_output_console.py  test_project_browser.py  test_yaml_editor_view.py
tests/ui/components/: __init__.py  test_yaml_highlighter.py
tests/ui/dialogs/: __init__.py  test_new_project.py
tools/: demo_flow_object_service.py  demo_flow_service.py  demo_object_service.py  demo_output_console.py  demo_progressive_character_creation.py  demo_property_panel.py  demo_support_services.py  demo_yaml_editor.py  interactive_pm_test.py  interactive_validator_test.py  run_project_manager.py  run_validator.py  test_yaml_highlighter.py
