[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grimoire-design-studio"
version = "1.0.0"
description = "A design studio for creating and testing GRIMOIRE system YAML definitions"
authors = [
    {name = "The Wyrd One", email = "wyrdbound@proton.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
keywords = ["grimoire", "yaml", "design", "studio", "gamedev"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment :: Role-Playing",
]

dependencies = [
    "PyQt6>=6.5.0",
    "pyyaml>=6.0",
    "pygments>=2.14.0",  # Required for YAML syntax highlighting
    "grimoire-logging>=0.1.0",
    "grimoire-model>=0.3.2",  # Object instantiation and validation
    "grimoire-context>=0.3.1",  # Flow execution context management
    "wyrdbound-dice>=0.0.1",  # Dice rolling
    "wyrdbound-rng>=0.0.1",  # Name generation
    "prefect>=2.14.0",  # Workflow orchestration
    # "langchain>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0", 
    "pytest-cov>=4.0.0",
    "pytest-xvfb>=3.0.0",  # For headless testing on Linux
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
    "types-Pygments>=2.14.0",  # Type stubs for Pygments syntax highlighter
    "bandit[toml]>=1.7.0",  # Security linting
]

[project.scripts]
grimoire-studio = "grimoire_studio.main:main"

[project.urls]
Homepage = "https://github.com/wyrdbound/grimoire-design-studio"
Repository = "https://github.com/wyrdbound/grimoire-design-studio"
Documentation = "https://github.com/wyrdbound/grimoire-design-studio/docs"
"Bug Tracker" = "https://github.com/wyrdbound/grimoire-design-studio/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
grimoire_studio = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=grimoire_studio",
    "--cov-report=term-missing", 
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--strict-markers",
    "--strict-config",
    "-v"
]
qt_api = "pyqt6"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "ui: marks tests as UI tests (require PyQt6, Linux only in CI)",
    "linux_only: marks tests that only run on Linux",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["grimoire_studio"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "grimoire_logging.*",
    "grimoire_model.*",
    "grimoire_context.*",
    "wyrdbound_dice.*",
    "wyrdbound_rng.*",
    "langchain.*",
    "prefect.*",
    "PyQt6.*",
]
ignore_missing_imports = true